Fix: Use pure white color on icons when hovering over for a better contrast when the background is also a bit light

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -1672,6 +1672,7 @@ div[data-role=controlgroup] a.ui-btn-active {
 
     .button-flat:hover {
         background-color: rgba(255, 255, 255, 0.2);
+        color: white;
     }
 
     .alphaPickerButton:hover {
